Fixed issue where the logo was not aligning vertically properly.

--- a/src/main/webapp/css/topnav.css
+++ b/src/main/webapp/css/topnav.css
@@ -11,6 +11,7 @@ html, body {
 	
 	display: grid;
     grid-template-columns: auto auto auto; 
+    grid-auto-flow: column; /*Makes items flow across columns into a single row*/ 
 	top: 0;
 	height: 6%;
 	width: 100%;
@@ -22,47 +23,18 @@ html, body {
 	padding: 2% 0;
 	font-size: 15px;
 	color: white;
+	vertical-align: middle;
 }
 
 .topnav-brand {
 	padding-left: 16px;
-	grid-column: 1 / 3;
+	grid-column: 1 / 1;
 }
 
 .topnav-user {
 	text-align: right;
 	padding-right: 16px;
 	grid-column: 3 / 3;
-}
-
-.topnav-ul, .topnav-ul a {
-	
-	height: 100%;
-}
-
-.topnav-ul {
-
-	display: grid;
-    grid-auto-flow: column; /*Makes items flow across columns into a single row*/ 
-	overflow: hidden;
-	font-size: 16px;
-}
-
-.topnav-ul a, .topnav-ul span {
-
-	padding: 3% 0;
-	display: block;
-	color: white;
-	text-align: center;
-	text-decoration: none;
-}
-
-.topnav-ul a:hover:not(.topnav-active) {
-	background-color: #111;
-}
-
-.topnav-active {
-	background-color: green;
 }
 
 @media screen and (max-height: 450px) {
